All citations have been converted to \cite commands

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -20,24 +20,11 @@
 }
 
 @misc{primo_user_2011,
-	title = {User Stories – O que são? Como Usar?},
-	url = {http://blog.myscrumhalf.com/2011/10/user-stories-o-que-sao-como-usar/},
+	title = {User Stories -- O que são? Como Usar?},
+	note = {\url{http://blog.myscrumhalf.com/2011/10/user-stories-o-que-sao-como-usar/}},
 	author = {Primo, Glauco},
 	month = oct,
 	year = {2011}
-}
-
-@misc{center_for_history_and_new_media_zotero_????,
-	title = {Zotero Quick Start Guide},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {{Center for History and New Media}},
-	annote = {Welcome to {Zotero!View} the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research {sources.Thanks} for installing Zotero.}
-}
-
-@misc{history_zotero_????,
-	title = {Zotero Quick Start Guide},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {History, Center for and Media, New}
 }
 
 @article{shaban-nejad_managing_2009,
@@ -119,12 +106,9 @@
 	pages = {3:1–3:5}
 }
 
-@misc{__????-1
-}
-
 @book{society_software_2004,
 	address = {{EUA}},
-	title = {Software Engineering Body of Knowledge ({SWEBOK)}},
+	title = {Software Engineering Body of Knowledge (SWEBOK)},
 	url = {http://www.swebok.org/},
 	publisher = {Angela Burgess},
 	author = {Society, {IEEE} Computer},
@@ -245,7 +229,7 @@
 	address = {Boston},
 	title = {Domain-driven design : tackling complexity in the heart of software},
 	isbn = {0321125215 9780321125217},
-	url = {http://www.worldcat.org/search?qt=worldcat_org_all&q=0321125215},
+	url = {http://www.worldcat.org/search? qt=worldcat\_org\_all\&q=0321125215},
 	publisher = {Addison-Wesley},
 	author = {Evans, Eric},
 	year = {2004},
@@ -263,5 +247,43 @@
 	pages = {26--32}
 }
 
+@article{washington2003using,
+  title={Using risk to balance agile and plan-driven methods},
+  author={Washington, George},
+  year={2003}
+}
 
 
+@misc{fowler_planned_evolutionary_design,
+	title = {Planned and Evolutionary Design},
+	author = {Martin Fowler},	
+	note = {\url{http://martinfowler.com/articles/ designDead.html\# PlannedAndEvolutionaryDesign}}
+}
+
+@misc{karpov_static_code_analysis,
+  title = {Static code analysis},
+  author = {Karpov Andrey},
+  note = {\url{http://www.codeproject.com/ Tips/344663/Static-code-analysis}},
+  year = {2012}}
+
+@book{Fowler1999,
+  added-at = {2007-09-26T23:42:13.000+0200},
+  address = {Boston, MA, USA},
+  author = {Fowler, Martin},
+  biburl = {http://www.bibsonomy.org/bibtex/27151885e8b8528651e048242f3527132/kimmens},
+  description = {AOEvolutionchapter short paper},
+  interhash = {955b704413985c65e6a0ba497d70b00e},
+  intrahash = {7151885e8b8528651e048242f3527132},
+  isbn = {0-201-48567-2},
+  keywords = {evolution refactoring software},
+  publisher = {Addison-Wesley},
+  timestamp = {2007-09-26T23:42:13.000+0200},
+  title = {Refactoring: Improving the Design of Existing Code},
+  year = 1999
+}
+
+@misc{unit_int_func_testing,
+  title = {Unit, Integration, and Functional Testing},
+  author = {Pyramid Web Framework},
+  note = {\url{http://docs.pylonsproject.org/ projects/pyramid/en/ latest/narr/testing.html}}
+}
